--- a/tst.html
+++ b/tst.html
@@ -4,42 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+    .btn01{
+        background-color: black;
+        font: bold;
+        color: brown;
+    }
+    .btn02{
+        background-color: brown;
+        font: bold;
+        color: black;
+    }
+    </style>
 </head>
 <body>
-    <h1>teste DOM</h1>
-    <h2>
-        <ul id="testt" >
-            <a href="#"> link falso xD</a>
-            <li>TESTES </li>
-            <li>TESTES </li>
-            <li>TESTES </li>
-        </ul>
-    </h2>
+    <button class="btn01">click 01</button>
+    <button class="btn02">click 02</button>
+
+    <script>
+let btn1 = window.document.querySelector(".btn01")
+let btn2 = window.document.querySelector(".btn02")
+
+
+btn1.addEventListener("click", function(){
+    let n1 = 10
+    let n2 = 5
+    let s = n1 * n2 
+
+    console.log(s)
+}, true)
+btn2.addEventListener("click", function(){
+    let n1 = 10
+    let n2 = 5
+    let s = n1 - n2 
+
+    console.log(s)
+}, true)
 
 
 
 
- <script>
 
-
-console.log(document.body)
-console.log(document.body.nextElementSibling)
-console.log(document.body.nextSibling)
-
-console.log(document.body.nextElementSibling === document.body.nextSibling)
-
-
-
-let ids = window.document.getElementById('testt')
-
-
-console.log(ids.nextSibling)// #text
-console.log(ids.childNodes) // vai msotrar uma nodelist 
-console.log(ids.children) // vai mostrar a coleção HTML, a partir do elemento buscado no caso o elemento ul pra frente 
-console.log(ids.hasChildNodes())
-
-
-
- </script>
+    </script>
 </body>
 </html>
