--- a/roadmap-telegram/eventos/eventos03.html
+++ b/roadmap-telegram/eventos/eventos03.html
@@ -18,7 +18,7 @@ let btn3 = window.document.querySelector(".btn3")
 
 
 btn1.addEventListener("click", function(){
-    console.log("cliquei no btn1")
+    console.log("cliquei no btn1"
 })
 
 btn2.addEventListener("click", function(e){
