--- a/roadmap-telegram/eventos/eventos03.html
+++ b/roadmap-telegram/eventos/eventos03.html
@@ -27,7 +27,7 @@ btn2.addEventListener("click", function(e){
 })
 
 btn3.addEventListener("click", function(){
-    console.log("cliquei no btn3")
+    console.log("cliquei no btn3"
 })
     </script>
 </body>
