--- a/roadmap-telegram/objetos/obj005.html
+++ b/roadmap-telegram/objetos/obj005.html
@@ -25,6 +25,8 @@ console.log(genero) // aqui vai somente mostrar os elemementos do objeto 'popula
 
 console.log(genero[0]) // aqui vai mostra 
 
+console.log(genero.push('mais um')) // 3, pois eu "puxei" mais um no meu obj, podemos usar qualquer elementode array dentro desse obj para poder fazer alteração
+
 
 
 
