--- a/roadmap-telegram/objetos/obj006.html
+++ b/roadmap-telegram/objetos/obj006.html
@@ -15,7 +15,7 @@
              }
          }
 
-         let construtora1 = new Contrutora ('parametro') // aqui está recebendo o parametro da função con trutora  que o obj this esta recebendo no caso o "name"
+         let construtora1 = new Contrutora ('parametro') // aqui está recebendo o parametro da função construtora  que o obj this esta recebendo no caso o "name"
         
 
          construtora1.novoName = 'novo nome com o parametro newName' 
