--- a/roadMap-from-Developer/json/workingJson01.html
+++ b/roadMap-from-Developer/json/workingJson01.html
@@ -9,7 +9,14 @@
     <script>
 
 
+let js = {
+    nome:'denner',
+    age:12
+}
 
+let str =  JSON.stringify(js)
+
+console.log(str)
 
 
     </script>
