--- a/roadmap-telegram/strings/string02.html
+++ b/roadmap-telegram/strings/string02.html
@@ -13,7 +13,7 @@
 
  let minha =  "minha primeira string"
 
- console.log(minha.includes("primeira"))// retorna apenas valor bool o valor que estamos buscando existe 
+ console.log(minha.includes("primeira"))// retorna apenas valor bool o valor que estamos buscando se existe 
  console.log(minha.indexOf("primeira"))
  console.log(minha.indexOf("primeira") >= 6) // aqui estamos vendo a posição que começa a string, e verificando se a posição que se encontra é maior ou igual a 6 // true
 
