--- a/roadmap-telegram/math/math03.html
+++ b/roadmap-telegram/math/math03.html
@@ -8,6 +8,10 @@
 <body>
     <script>
     console.log(Math.random() * 10 ) // apos o () usar um numero especifico que deseja usar numero para random por ex () * 10 vai mostrar numeros aleatorios de 1 a 10 
+    
+    let numeros = 10 
+
+    console.log(Math.random() * numeros) // agora a variavel numeros vale 10, altomaticamente o amth random vai randonificar um numero de 0 a 10 também 
     </script>
 </body>
 </html>
