--- a/testesEcodigoCopiados.html
+++ b/testesEcodigoCopiados.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <p>
-        testastando e vendo sobre objetos 
-    </p>
-
-<script>
-function carro(make, model1, year, owner) { 
-    this.make = make
-    this.model = model1
-    this.year = year
-    this.owner = owner
- }
-
-console.log(typeof(carro))
-
-
-
-</script>
-
-
-
+    
 </body>
 </html>
