--- a/roadmap-telegram/strings/desafio1StringForChatgpt.html
+++ b/roadmap-telegram/strings/desafio1StringForChatgpt.html
@@ -1,15 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script>
+// DESAFIO CRIAR UMA FUNÇÃO RECEBER UMA STRING E ELA SAIR INVERTIDA NO CONSOLE. 
 
-// desafio criar um função e receber um string e na saida do console ela sair invertida
-
-function inverter (str){ // recebendo um parametro qualquer string para poder retornar ela no console
 
 
-return str.split('').reverse().join('');  // O método split() divide uma String em uma lista ordenada de substrings, coloca essas substrings em um array e retorna o array
+
+
+function saidaString(str){ // recebendo um parametro qualquer string para poder retornar ela no console
+
+
+return str.split('').reverse().join('') // O método split() divide uma String em uma lista ordenada de substrings, coloca essas substrings em um array e retorna o array
 // reverse() vai mostrar  astring reversa
 // O método join() junta todos os elementos de um array (ou um array-like object) em uma string e retorna esta string.
 
- 
 }
+
 
 console.log(inverter('denner')) // renned  
 
@@ -33,3 +45,10 @@ function inverter(str) {
   // Retorna a string invertida
   return stringInvertida;
 }
+
+
+
+
+    </script>
+</body>
+</html>
