--- a/tst1.html
+++ b/tst1.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
-            background-color: #111;
-            color: #0f0;
-            font-family: 'Courier New', Courier, monospace;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        #clock{
-            font-size: 5em;
-        }
-
-        
+      #msg{
+         background-color: darkgray;
+         border-radius: 10px;
+         box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.42);
+         width: 300px;
+         height: 100px;
+         font-size: larger;
+         font-size: 2em;
+         font-family: Arial, Helvetica, sans-serif;
+         font-display: auto;
+         margin: auto;
+         text-align: center;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+      }
     </style>
-
-    <div id="clock">00:00:00</div>
 </head>
 <body>
-    <script>
-
-function atualizarRelogio(){
-    const agora = new Date();
-    const horas = String(agora.getHours()).padStart(2, '0')
-    const minutos = String(agora.getMinutes()).padStart(2, '0')
-    const segundos = String(agora.getSeconds()).padStart(2, '0')
-
-    document.getElementById('clock').textContent= `${horas}:${minutos}:${segundos}`;
+    <div id="msg"></div>
 
 
-}
+<script>
 
 
-setInterval(atualizarRelogio, 1000)
-atualizarRelogio();
+
+let msg = window.document.getElementById('msg')
 
 
 
 
-    </script>
+
+
+
+
+
+
+
+
+
+</script>
+
 </body>
 </html>
