--- a/roadMap-from-Developer/settimout/timeout01.html
+++ b/roadMap-from-Developer/settimout/timeout01.html
@@ -14,10 +14,21 @@ let btn = window.document.getElementById('btn')
 
 btn.addEventListener('click',()=>{
     setTimeout(() => {
-        alert('clicou')
+        alert('2 segundos')
     }, 2000);
 })
 
+btn.addEventListener('click',()=>{
+    setTimeout(() => {
+        alert('5 segundos')
+    }, 5000);
+})
+
+btn.addEventListener('click',()=>{
+    setTimeout(() => {
+        alert('8 segundos')
+    }, 8000);
+})
 
 
 
