--- a/CFB_CURSOS/javascript-lado-cliente/desestruturação/des04.html
+++ b/CFB_CURSOS/javascript-lado-cliente/desestruturação/des04.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <Script>
+        let a,b
+
+({a,b}={a:'azul',b:'red'})
+
+console.log(a)
+console.log(b)
+    </Script>
 </body>
 </html>
