--- a/CFB_CURSOS/javascript-lado-cliente/desestruturação/des08.html
+++ b/CFB_CURSOS/javascript-lado-cliente/desestruturação/des08.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h3>funçoes com outras variaveis (fora e dentro da funçao</h3>
     <script>
-
-let name = 'my name is Jhon'
-
-
-function last(){
-    let lastName = 'Hello, ' + name
-    console.log(lastName)
+        let obj ={
+    nome:'denner',
+    sob:20
 }
 
+let {nome,sob} = obj //  dentro de {} vai usar os elementos que estão dentro de objeto nome e sob
 
-last()
+console.log(nome)
+console.log(sob)
+
 
     </script>
 </body>
