--- a/roadmap-telegram/tt2.html
+++ b/roadmap-telegram/tt2.html
@@ -4,50 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .spc{
+            margin-left: 1em;
+        }
+    </style>
 </head>
 <body>
-<img src="https://imgs.search.brave.com/skOnqCAi1SxFe5qxLoaVwx_j5tSXBzWYy21jWDxeVPA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9ka3Ju/NHNrMHJuMzF2LmNs/b3VkZnJvbnQubmV0/L3VwbG9hZHMvMjAy/MS8wNC9ET00tSkFW/QVNDUklQVC00MDB4/MjgwLnBuZw" alt="">
-
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex adipisci facilis laborum libero illo doloremque. Harum cum ratione, sequi facere dicta quam illo rerum, iste ullam eos optio, libero consequatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid omnis libero quia at, voluptate blanditiis sed incidunt deserunt vel magni ducimus dicta. Ullam ab fugit atque magnam, alias voluptates? Mollitia.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem molestias repudiandae odit commodi voluptas unde perspiciatis nam autem libero eveniet! Qui nihil maiores labore ex sunt dolorum in earum esse?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti delectus alias nam dolorum, velit ex earum sunt perferendis accusantium sed asperiores eos unde animi temporibus quae dignissimos provident quidem ipsum.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex adipisci facilis laborum libero illo doloremque. Harum cum ratione, sequi facere dicta quam illo rerum, iste ullam eos optio, libero consequatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid omnis libero quia at, voluptate blanditiis sed incidunt deserunt vel magni ducimus dicta. Ullam ab fugit atque magnam, alias voluptates? Mollitia.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem molestias repudiandae odit commodi voluptas unde perspiciatis nam autem libero eveniet! Qui nihil maiores labore ex sunt dolorum in earum esse?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti delectus alias nam dolorum, velit ex earum sunt perferendis accusantium sed asperiores eos unde animi temporibus quae dignissimos provident quidem ipsum.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex adipisci facilis laborum libero illo doloremque. Harum cum ratione, sequi facere dicta quam illo rerum, iste ullam eos optio, libero consequatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid omnis libero quia at, voluptate blanditiis sed incidunt deserunt vel magni ducimus dicta. Ullam ab fugit atque magnam, alias voluptates? Mollitia.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem molestias repudiandae odit commodi voluptas unde perspiciatis nam autem libero eveniet! Qui nihil maiores labore ex sunt dolorum in earum esse?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti delectus alias nam dolorum, velit ex earum sunt perferendis accusantium sed asperiores eos unde animi temporibus quae dignissimos provident quidem ipsum.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex adipisci facilis laborum libero illo doloremque. Harum cum ratione, sequi facere dicta quam illo rerum, iste ullam eos optio, libero consequatur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid omnis libero quia at, voluptate blanditiis sed incidunt deserunt vel magni ducimus dicta. Ullam ab fugit atque magnam, alias voluptates? Mollitia.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem molestias repudiandae odit commodi voluptas unde perspiciatis nam autem libero eveniet! Qui nihil maiores labore ex sunt dolorum in earum esse?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti delectus alias nam dolorum, velit ex earum sunt perferendis accusantium sed asperiores eos unde animi temporibus quae dignissimos provident quidem ipsum.</p>
 
 
+<p class="spc">primeira linha</p>
 
-    <script>
-window.addEventListener('load', ()=>{ // evento load e disparado quando tudo estiver carregado, incluindo imagens etc
-console.log('load')
+<hr>
 
-})
+<p>segunda linha</p>
 
-window.addEventListener('DOMContentLoaded', ()=>{
-    console.log('DomContent')
-})
+<pre>
 
+   &lt; I'm an expert in my field. &gt;
+      ---------------------------
+          \   ^__^
+           \  (oo)\_______
+              (__)\       )\/\
+                  ||----w |
+                  ||     ||
 
-window.addEventListener('resize', ()=>{
-    console.log('resize', innerWidth, innerHeight)
-})
-
-window.addEventListener('scroll', ()=>{
-    console.log('scrol', pageYOffset)
-})
+</pre>
 
 
-
-    </script>
 </body>
 </html>
