--- a/CFB_CURSOS/javascript-lado-cliente/objetos-construtores/obj1.html
+++ b/CFB_CURSOS/javascript-lado-cliente/objetos-construtores/obj1.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>literais 02</title>
+    <title>Document</title>
 </head>
 <body>
     <script>
-const num ={
-  numero:10
+
+
+class nome{
+    constructor(){
+        this.nome = 'denner'
+    }
 }
 
-let p1 = num
-let p2 = num
+let p1 = new nome()
 
-console.log(num.numero)
+console.log(p1.nome)
 
-console.log(p1.numero)
+
+
+
 
     </script>
 </body>
