--- a/listas01.html
+++ b/listas01.html
@@ -6,19 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-
-<ul>   <!-- Listas nao ordenadas -->
-    <li>estudar ingles</li>
-    <li>javascript</li>
-    <li>ler</li>
-</ul>
-
-<ol > <!-- listas ordenadas--> 
-    <li>treinar</li>
-    <li>comer</li>
-    <li>dormir</li>
-</ol>
-
+    <address> <!-- display block,'executa quebra de linha antes e depois categoria de fluxo-->
+    Autor: Denner Nemeth de Queiroz <!-- nao pode usar address dentro do outro -->
+    </address>
 </body>
 </html>
