--- a/estesdescript.html
+++ b/estesdescript.html
@@ -4,22 +4,33 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
+   <style>
+      #msg{
+         border-radius: 10px;
+         border: 1px solid black;
+         background-color: lightblue;
+         margin-bottom: 10px;
+         height: 100px;
+         width: 400px;
+         font-size: 2em;
+      }
+   </style>
 </head>
 <body>
-<div id="msg"></div>
+   <div id="msg"></div>
+
    <script>
-let msg = window.document.getElementById('msg')
 
-let nomes = {
-   nome1:'denner',
-   nome2:'nemeth'
+let msg = window.document.getElementById('msg')   
+
+      let obj1 = {
+         nome1:"denner",
+         nome2:'nemeth'
+      }
+
+for (let chave in obj1){
+   msg.textContent = chave
 }
-
-
-let propriedade = Object.values(nomes)
-
-msg.textContent = propriedade
-
    </script>
 </body>
 </html>
