--- a/address.html
+++ b/address.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="preference"> 
-        <label for="cheese">i like cheese</label> 
-    </div>
-
-
+    <p>usando o address para usar como :,<br>
+        e-mail de contato <br>
+        telefone <br>
+        etc <br>
+        informaçoes pessoais ou profissionais 
+    </p>
 </body>
 </html>
