--- a/jstestes.html
+++ b/jstestes.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        span{
+            background-color: aqua;
+        }
+        div > span{
+            background-color: yellow;
+        }
+    </style>
 </head>
+
 <body>
-    <div class="preference"> 
-        <label for="cheese">i like cheese</label> 
-    </div>
+   <div>
+    <span>
+        span 1
+        <span>span2</span>
+    </span>
+   </div>
 
 
 </body>
